# kreader

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  HACKING.md  README.md  conanfile.py
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
conan/: CMakePresets.json  Catch2-release-x86_64-data.cmake  Catch2Config.cmake  Catch2ConfigVersion.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  fmt-Target-release.cmake  fmt-config-version.cmake  fmt-config.cmake  fmt-release-x86_64-data.cmake
example/: CMakeLists.txt
fuzz_test/: fuzz_tester.cpp
include/kreader/: csv.hpp
source/: csv.cpp
src/: CMakeLists.txt
src/kreader/: CMakeLists.txt  csv.cpp
src/kreader_test_sample/: CMakeLists.txt  main.cpp  test.csv
test/: CMakeLists.txt  tests.cpp  tests_benchmarks.cpp
test/source/: kreader_test.cpp
